# ugit

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/skills/add-command/: SKILL.md
.github/workflows/: release.yml
crates/ugit-cli/: Cargo.toml
crates/ugit-cli/src/: main.rs
crates/ugit-core/: Cargo.toml
crates/ugit-core/src/: diff.rs  lib.rs  model.rs  repo.rs  store.rs
scripts/: build-local.sh  stage-sidecar.sh
src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  CommentsPanel.tsx  ErrorBoundary.tsx  FileList.tsx  FileTreeSidebar.tsx  JumpToFile.tsx  RefPicker.tsx  RepoOpener.tsx  ShortcutsOverlay.tsx  ThemeControls.tsx  states.tsx
src/diff/: DiffView.tsx  DiffWorkerProvider.tsx  MultiDiffView.test.tsx  MultiDiffView.tsx  themes.ts
src/lib/: ipc.ts  treeOrder.ts  types.ts
src/theme/: theme.tsx
