[workspace]
resolver = "2"
members = ["src-tauri", "crates/ugit-core", "crates/ugit-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ssnxd"]
license = "MIT"
repository = "https://github.com/ssnxd/ugit"

[workspace.dependencies]
ugit-core = { path = "crates/ugit-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = "0.84.0"
thiserror = "2"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
