[package]
name = "ugit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The ugit command-line interface"

[[bin]]
name = "ugit"
path = "src/main.rs"

[dependencies]
ugit-core = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
