[package]
name = "ugit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain logic and store for ugit (GUI + CLI)"

[lib]
name = "ugit_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
